@@ -1216,8 +1216,8 @@ void printosscanoutput(Target *currenths) {
   char numlst[512]; /* For creating lists of numbers */
   char *p; /* Used in manipulating numlst above */
   FingerPrintResults *FPR;
+  int osscanSys = 0;
   int distance = -1;
-  bool wrapFP = true; /* Whether to wrap the fingerprint result. */
   
   if (!currenths->osscan_performed)
 	return;
@@ -1225,27 +1225,31 @@ void printosscanoutput(Target *currenths) {
   if (currenths->FPR == NULL && currenths->FPR1 == NULL) {
 	return;
   } else if (currenths->FPR != NULL && currenths->FPR1 == NULL) {
+	osscanSys = 2;
 	FPR = currenths->FPR;
   } else if (currenths->FPR == NULL && currenths->FPR1 != NULL) {
+	osscanSys = 1;
 	FPR = currenths->FPR1;
-	wrapFP = false;
   }
   else {
 	/* Neither is NULL. This happens when new OS scan system fails to
 	   get a perfect match and falls back on the old OS scan
 	   system. */
 	if (currenths->FPR->num_perfect_matches > 0) {
+	  osscanSys = 2;
 	  FPR = currenths->FPR; /* Just an ensurance. */
 	} else if (currenths->FPR1->num_perfect_matches > 0) {
+	  osscanSys = 1;
 	  FPR = currenths->FPR1;
-	  wrapFP = false;
 	} else if (currenths->FPR->overall_results == OSSCAN_SUCCESS) {
+	  osscanSys = 2;
 	  FPR = currenths->FPR;
 	} else if (currenths->FPR1->overall_results == OSSCAN_SUCCESS) {
+	  osscanSys = 1;
 	  FPR = currenths->FPR1;
-	  wrapFP = false;
 	} else {
 	  /* Both fails. */
+	  osscanSys = 2;
 	  FPR = currenths->FPR;
 	}
   }
@@ -1329,18 +1333,18 @@ void printosscanoutput(Target *currenths) {
 	  }
 	  log_write(LOG_NORMAL|LOG_SKID|LOG_STDOUT, "\n");
 	}
-	  if (FPR->fingerprintSuitableForSubmission()) {
+	  if (FPR->fingerprintSuitableForSubmission() && osscanSys == 2) {
 		log_write(LOG_NORMAL|LOG_SKID_NOXLT|LOG_STDOUT,"No exact OS matches for host (If you know what OS is running on it, see http://www.insecure.org/cgi-bin/nmap-submit.cgi).\nTCP/IP fingerprint:\n%s\n",
 				  mergeFPs(FPR->FPs, FPR->numFPs, true,
 						   currenths->v4hostip(), distance, currenths->MACAddress(),
 						   FPR->osscan_opentcpport, FPR->osscan_closedtcpport, FPR->osscan_closedudpport,
-						   wrapFP));
+						   true));
 
 	} else {
 	  log_write(LOG_NORMAL|LOG_SKID_NOXLT|LOG_STDOUT,"No exact OS matches for host (test conditions non-ideal).");
 	  if (o.verbose > 1)
-		  log_write(LOG_NORMAL|LOG_SKID_NOXLT|LOG_STDOUT, "\nTCP/IP fingerprint:\n%s",
-					mergeFPs(FPR->FPs, FPR->numFPs, false,
+		  log_write(LOG_NORMAL|LOG_SKID_NOXLT|LOG_STDOUT, "\nTCP/IP fingerprint by osscan system #%d:\n%s",
+					osscanSys, mergeFPs(FPR->FPs, FPR->numFPs, false,
 							 currenths->v4hostip(), distance, currenths->MACAddress(),
 							 FPR->osscan_opentcpport, FPR->osscan_closedtcpport, FPR->osscan_closedudpport,
 							 false));
@@ -1352,17 +1356,17 @@ void printosscanoutput(Target *currenths) {
 	  log_write(LOG_NORMAL|LOG_SKID|LOG_STDOUT,"OS Fingerprint:\n%s\n", fp2ascii(FPR->FPs[FPR->goodFP]));
       }
   } else if (FPR->overall_results == OSSCAN_NOMATCHES) {
-	if (FPR->fingerprintSuitableForSubmission()) {
+	if (FPR->fingerprintSuitableForSubmission() && osscanSys == 2) {
 	  log_write(LOG_NORMAL|LOG_SKID_NOXLT|LOG_STDOUT,"No OS matches for host (If you know what OS is running on it, see http://www.insecure.org/cgi-bin/nmap-submit.cgi).\nTCP/IP fingerprint:\n%s\n",
 				mergeFPs(FPR->FPs, FPR->numFPs, true,
 						 currenths->v4hostip(), distance, currenths->MACAddress(),
 						 FPR->osscan_opentcpport, FPR->osscan_closedtcpport, FPR->osscan_closedudpport,
-						 wrapFP));
+						 true));
       } else {
 	  log_write(LOG_NORMAL|LOG_SKID_NOXLT|LOG_STDOUT,"No OS matches for host (test conditions non-ideal).\n");
 	  if (o.verbose > 1)
-		log_write(LOG_NORMAL|LOG_SKID_NOXLT|LOG_STDOUT, "\nTCP/IP fingerprint:\n%s",
-				  mergeFPs(FPR->FPs, FPR->numFPs, false,
+		log_write(LOG_NORMAL|LOG_SKID_NOXLT|LOG_STDOUT, "\nTCP/IP fingerprint by osscan system #%d:\n%s",
+				  osscanSys, mergeFPs(FPR->FPs, FPR->numFPs, false,
 						   currenths->v4hostip(), distance, currenths->MACAddress(),
 						   FPR->osscan_opentcpport, FPR->osscan_closedtcpport, FPR->osscan_closedudpport,
 						   false));
@@ -1370,8 +1374,8 @@ void printosscanoutput(Target *currenths) {
   } else if (FPR->overall_results == OSSCAN_TOOMANYMATCHES || (FPR->num_perfect_matches > 8 && !o.debugging)) {
 	log_write(LOG_NORMAL|LOG_SKID|LOG_STDOUT,"Too many fingerprints match this host to give specific OS details\n");
 	if (o.debugging || o.verbose) {
-		log_write(LOG_NORMAL|LOG_SKID|LOG_STDOUT,"TCP/IP fingerprint:\n%s",
-				  mergeFPs(FPR->FPs, FPR->numFPs, false,
+		log_write(LOG_NORMAL|LOG_SKID|LOG_STDOUT,"TCP/IP fingerprint by osscan system #%d:\n%s",
+				  osscanSys, mergeFPs(FPR->FPs, FPR->numFPs, false,
 						   currenths->v4hostip(), distance, currenths->MACAddress(),
 						   FPR->osscan_opentcpport, FPR->osscan_closedtcpport, FPR->osscan_closedudpport,
 						   false));
@@ -1414,8 +1418,12 @@ void printosscanoutput(Target *currenths) {
        }
 
        log_write(LOG_XML, "<tcpsequence index=\"%li\" class=\"%s\" difficulty=\"%s\" values=\"%s\" />\n", (long) currenths->seq.index, seqclass2ascii(currenths->seq.seqclass), seqidx2difficultystr(currenths->seq.index), numlst); 
-       if (o.verbose)
+       if (o.verbose) {
+		 if (osscanSys == 1)
+		   log_write(LOG_NORMAL|LOG_SKID|LOG_STDOUT,"%s", seqreport1(&(currenths->seq)));
+		 else if(osscanSys == 2)
 	 log_write(LOG_NORMAL|LOG_SKID|LOG_STDOUT,"%s", seqreport(&(currenths->seq)));
+	   }
        log_write(LOG_MACHINE,"\tSeq Index: %d", currenths->seq.index);
      }
 
